--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@ $con->close();
                         <li><a href="#about">Quienes Somos</a></li>
                         <li><a href="#client">Alianzas</a></li>
                         <li><a href="#contact">Contacto</a></li>
-                        <li><a class="btn-small">Unirse a Clase</a></li>
+                        <li><a href="clase.html" class="btn-small">Unirse a Clase</a></li>
                     </ul>
                 </nav>
 
