--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@ $con->close();
             <div class="menu">
                 <nav id="nav">
                     <ul>
-                        <li><a href="#service">Habilidadessssss</a></li>
+                        <li><a href="#service">Habilidades</a></li>
                         <li><a href="#about">Quienes Somos</a></li>
                         <li><a href="#client">Alianzas</a></li>
                         <li><a href="#contact">Contacto</a></li>
