Se agrego el text-to-Speech al inicio
Hola cesarito

--- a/Index.html
+++ b/Index.html
@@ -45,9 +45,16 @@ $con->close();
 </head>
 
 <body>
-
+    <style>
+        .highlighted {
+            background-color: yellow;
+            color: black;
+        }
+    </style>
     <!-- Header -->
+    
     <header id="header">
+        <select id="voiceSelect"></select>
         <div class="container_header">
             <div class="logo">
                 <a href="#home"><img src="Assets/media/Logo/logo_kiwi_nav.png" alt="A&L Logo"></a>
