Documentacion de los 4 Ejercicios

--- a/Vistas/clase_UnirPalabras.html
+++ b/Vistas/clase_UnirPalabras.html
@@ -453,11 +453,7 @@
                         );
                         $(this).append(
                             //Agrega un input con el nombre del elemento droppable
-                            '<input id="palabra" type="hidden" name="' +
-                            targetId +
-                            '" value="' +
-                            buttonText +
-                            '">'
+                            '<input id="palabra" type="hidden" name="' +targetId +'" value="' +buttonText +'">'
                         );
                         //Elimina el elemento que se arrastro
                         var primeraText = $("#primera-droppable").text().trim();
