--- a/Vistas/clase_UnirPalabras.html
+++ b/Vistas/clase_UnirPalabras.html
@@ -114,6 +114,10 @@
         #card-ejercicio{
             background-color: #E4E8EB;
         }
+
+        .btn-floating{
+            background-color: #b1c2a3;
+        }
     </style>
     <body>
         <!-- Contenido de la Pagina -->
@@ -141,8 +145,17 @@
                     </div>
                 </div>
                 <!-- Titulo de la Clase -->
-                <div class="col s6">
+                <div class="col s7">
                     <h1 class="center-align"><b>Capitulo I:</b> Unir Palabras</h1>
+                </div>
+                <!-- Botones de Navegacion -->
+                <div class="col s2">
+                    <div class="card-panel z-depth-1" style="background-color: #E4E8EB">
+                        <button class="btn-floating btn-large waves-effect waves-light"><i class="fas fa-question"></i></button>
+                        <button class="btn-floating btn-large waves-effect waves-light"><i class="fas fa-volume-up"></i></button>
+                        <button class="btn-floating btn-large waves-effect waves-light"><i class="fas fa-rotate-right"></i></button>
+                        <button class="btn-floating btn-large waves-effect waves-light"><i class="fas fa-sign-out-alt"></i></button>
+                    </div>
                 </div>
             </div>
             <!-- Area Media de la Pagina-->
@@ -427,7 +440,7 @@
             </div>
         </div>
         
-        //Scripts
+        <!-- Scripts de la Pagina -->
         <script src="../Assets/materialize/js/materialize.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -507,5 +520,6 @@
             });
         </script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.10/dist/sweetalert2.all.min.js"></script>
+        <script src="https://kit.fontawesome.com/770f2e87c7.js" crossorigin="anonymous"></script>
     </body>
 </html>
