--- a/Vistas/clase_UnirPalabras.html
+++ b/Vistas/clase_UnirPalabras.html
@@ -139,7 +139,7 @@
 
     </style>
     <body>
-        
+        <!-- Comentario -->
         <!-- Contenido de la Pagina -->
         <div style="width: 90%; margin: 0 auto;">
             <!-- Area Superior de la Pagina -->
