Renovacion de landpage

--- a/Index.html
+++ b/Index.html
@@ -66,6 +66,7 @@ $con->close();
                         <li><a href="#service">Habilidades</a></li>
                         <li><a href="#about">Quienes Somos</a></li>
                         <li><a href="#client">Alianzas</a></li>
+                        <li><a href="#work">Planes</a></li>
                         <li><a href="#contact">Contacto</a></li>
                         <li><a href="clase.html" class="btn-small">Unirse a Clase</a></li>
                     </ul>
@@ -85,7 +86,7 @@ $con->close();
             <div class="cover">
                 <section class="text_cover">
                     <h1>Kiwi Plataforma de Educacion</h1>
-                    <p>Integracion de la informatica en cursos diseñados para reforzar las habilidades de los estudiantes.</p>
+                    <p>Integración de la informática en cursos diseñados para reforzar las habilidades de los estudiantes.</p>
                 </section>
                 <section class="img_cover">
                     <img src="Assets/media/Cover/img_cover2.png" alt="Cover">
@@ -154,23 +155,13 @@ $con->close();
             <div class="client card_primary">
                 <div class="text_client text_card-primary">
                     <p class="before_title">ALIANZAS</p>
-                    <h1>Algunas de nuestras alianzas</h1>
+                    <h1>Nuestra Alianza</h1>
                 </div>
 
                 <div class="container_card-client container_box-cardPrimary">
                     <div class="card_client">
                         <div class="image">
                             <img src="Assets/media/Client/st_logo.png" />
-                        </div>
-                    </div>
-                    <div class="card_client">
-                        <div class="image">
-                            <img src="Assets/media/Client/inacap.jpg" />
-                        </div>
-                    </div>
-                    <div class="card_client">
-                        <div class="image">
-                            <img src="Assets/media/Client/uoh.png" />
                         </div>
                     </div>
                 </div>
@@ -286,7 +277,7 @@ $con->close();
                         <img src="Assets/media/Logo/kiwi_logo.png" alt="">
                     </div>
                     <div class="terms">
-                        Integracion de la informatica en cursos diseñados para reforzar las habilidades de los estudiantes.
+                        Integración de la informática en cursos diseñados para reforzar las habilidades de los estudiantes.
                     </div>
                 </div>
 
@@ -302,10 +293,10 @@ $con->close();
                     <!--<?php
                     $row = mysqli_fetch_array($result)
                     ?> -->
-                    <a href="#!" target="_blank"><i class="fa-solid fa-location-dot"></i>direccion <!--<?php echo $row['direccion'] ?>--></a>
+                    <a href="#!" target="_blank"><i class="fa-solid fa-location-dot"></i> José María O' Carrol # 63. <!--<?php echo $row['direccion'] ?>--></a>
                     <a href="#!"><i class="fa-solid fa-envelope"></i> kiwiplataform@gmail.com</a>
-                    <a href="tel:<?php echo $row['numero_telefono'] ?>"><i class="fa-solid fa-phone"></i> numero telefonico<!--<?php echo $row['numero_telefono'] ?>--></a>
-                    <a href="#"><i class="fa-solid fa-calendar"></i> 8:30 a 13:30 | 14:30 a 18:30</a>
+                    <a href="tel:<?php echo $row['numero_telefono'] ?>"><i class="fa-solid fa-phone"></i> +569 34130638.<!--<?php echo $row['numero_telefono'] ?>--></a>
+                    <a href="#"><i class="fa-solid fa-calendar"></i> 8:30 a 13:30 | 14:30 a 18:30.</a>
                     <!--<?php
                     $result->close();
                     ?>-->
