--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,8 @@ $con->close();
 
     <link rel="stylesheet" href="Assets/css/Styles.css">
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
+
 </head>
 
 <body>
@@ -54,7 +56,8 @@ $con->close();
     <!-- Header -->
     
     <header id="header">
-        <select id="voiceSelect"></select>
+        
+        <select id='voiceSelect'></select>
         <div class="container_header">
             <div class="logo">
                 <a href="#home"><img src="Assets/media/Logo/logo_kiwi_nav.png" alt="A&L Logo"></a>
