Integracion de iFrame

--- a/Vistas/clase.html
+++ b/Vistas/clase.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-1">
                     <!--Iframe donde se reproducira el ejercicio-->
-                    <iframe src="../Vistas/sample_iframe.html" frameborder="0" class="clase"></iframe>
+                    <iframe src="../Vistas/Ejercicios/clase_UnirPalabras.html" frameborder="0" class="clase"></iframe>
                     <!--Seccion inferior-->
                     <div class="downside">
                         <!--Texto explicativo-->
