--- a/Vistas/clase.html
+++ b/Vistas/clase.html
@@ -95,7 +95,7 @@
                 </div>
                 <!--Seccion de explicacion del capitulo-->
                 <div class="col-2">
-                    <h2 class="title_explain"><i class="material-icons">history_edu</i> Explcación del capitulo</h2>
+                    <h2 class="title_explain"><i class="material-icons">history_edu</i> Explicación del capitulo</h2>
                     <hr class="division_explain">
                     <p class="lesson_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         Cupiditate consectetur quibusdam unde ea porro quos sint voluptate quisquam dolores
