Arreglando la ausencia de sexo del sexo

--- a/Vistas/ventana_Final.html
+++ b/Vistas/ventana_Final.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,16 +26,15 @@
             margin: auto;
         }
 
-        #card-mensaje p{
+        #card-mensaje p {
             color: #000;
             text-align: center;
         }
 
-        #card-mensaje span{
-            color: #000; 
-            text-align: center;                                                    
+        #card-mensaje span {
+            color: #000;
+            text-align: center;
         }
-
     </style>
 
 </head>
@@ -44,8 +44,8 @@
     <div id="card-mensaje" class="card">
         <div class="card-content white-text">
             <span class="card-title">Felicidades has completado el Ejercicio!</span>
-            <p>I am a very simple card. I am good at containing small bits of information.
-                I am convenient because I require little markup to use effectively.</p>
+            <p>Has demostrado un gran esfuerzo y dedicación al superar este desafío. Tu perseverancia y determinación
+                son admirables. Continúa así, siempre buscando aprender y crecer.</p>
         </div>
         <div class="card-action center">
             <button onclick="redireccionar()" class="waves-effect waves-light btn">Ir a la página principal</button>
@@ -68,4 +68,5 @@
     </script>
 
 </body>
+
 </html>
