--- a/Vistas/Ejercicios/clase_UnirPalabras2.html
+++ b/Vistas/Ejercicios/clase_UnirPalabras2.html
@@ -363,7 +363,14 @@
             });
         });
     </script>
+    <script>
+        // Obtener la URL actual de la página dentro del iframe
+        var iframeUrl = window.location.href;
 
+        // Enviar la URL al elemento padre
+        window.parent.postMessage(iframeUrl, '*');
+
+    </script>
 </body>
 
 </html>
