--- a/Vistas/clase.html
+++ b/Vistas/clase.html
@@ -50,7 +50,7 @@
             <div class="top_side">
                 <!--Titulo-->
                 <div class="tittle">
-                    <h1 class="title">Capitulo 1 <span class="sub_title">1.1 Hardware</span></h1>
+                    <h1 class="title">Capitulo 1 <span class="sub_title" id = "titulo">1.1 Hardware</span></h1>
                 </div>
                 <!--Barra de Herramientas-->
                 <div class="toolBar">
@@ -78,7 +78,7 @@
                     <div class="downside">
                         <!--Texto explicativo-->
                         <div class="lesson_text">
-                            <h2 class="lesson_title">Nivel 1</h2>
+                            <h2 class="lesson_title" id = "nivel">Nivel 1</h2>
                             <p class="lesson_description" id = "descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                                 Cupiditate consectetur quibusdam unde ea porro quos sint voluptate quisquam dolores
                                 veritatis assumenda omnis libero, blanditiis ullam cum consequuntur placeat voluptates
@@ -155,18 +155,35 @@
 
             // Modificar datos en la página principal según la URL del iframe
             if (iframeUrl.endsWith('clase_UnirPalabras.html')) {
-                var elementoExterno = document.getElementById('descripcion');
-                elementoExterno.innerHTML = 'hola';
+                var elementoExterno1 = document.getElementById('titulo');
+                var elementoExterno2 = document.getElementById('descripcion');
+                var elementoExterno3 = document.getElementById('nivel');
+                elementoExterno1.innerHTML = '1.1 Unir Palabras';
+                elementoExterno2.innerHTML = 'hola';
+                elementoExterno3.innerHTML = 'Nivel 1';
             }
             else if (iframeUrl.endsWith('clase_UnirPalabras2.html')) {
-                var elementoExterno = document.getElementById('descripcion');
-                elementoExterno.innerHTML = 'hola perra';
+                var elementoExterno1 = document.getElementById('titulo');
+                var elementoExterno2 = document.getElementById('descripcion');
+                var elementoExterno3 = document.getElementById('nivel');
+                elementoExterno1.innerHTML = '1.1 Unir Palabras';
+                elementoExterno2.innerHTML = 'hola perra';
+                elementoExterno3.innerHTML = 'Nivel 2';
             } else if (iframeUrl.endsWith('clase_SumarCirculos.html')) {
-                var elementoExterno = document.getElementById('descripcion');
-                elementoExterno.innerHTML = 'hola perra circular';
+                var elementoExterno1 = document.getElementById('titulo');
+                var elementoExterno2 = document.getElementById('descripcion');
+                var elementoExterno3 = document.getElementById('nivel');
+                elementoExterno1.innerHTML = '1.2 Sumar Usando Circulos';
+                elementoExterno2.innerHTML = 'hola perra circular';
+                elementoExterno3.innerHTML = 'Nivel 1';
             } else if (iframeUrl.endsWith('clase_SumarCirculos2.html')) {
-                var elementoExterno = document.getElementById('descripcion');
-                elementoExterno.innerHTML = 'hola perra realmente circular';
+                var elementoExterno1 = document.getElementById('titulo');
+                var elementoExterno2 = document.getElementById('descripcion');
+                var elementoExterno3 = document.getElementById('nivel');
+                elementoExterno1.innerHTML = '1.2 Sumar Usando Circulos';
+                elementoExterno2.innerHTML = 'hola perra realmente circular';
+                elementoExterno3.innerHTML = 'Nivel 2';
+
             } else {
                 var elementoExterno = document.getElementById('descripcion');
                 elementoExterno.innerHTML = 'sin ruta';
