Union de Gestion con Clase, mas los detalles

--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@ $con->close();
                         <li><a href="#client">Alianzas</a></li>
                         <li><a href="#work">Planes</a></li>
                         <li><a href="#contact">Contacto</a></li>
-                        <li><a href="clase.html" class="btn-small">Ingresar</a></li>
+                        <li><a href="gestion.html" class="btn-small">Ingresar</a></li>
                     </ul>
                 </nav>
 
