--- a/Vistas/info_eje2.html
+++ b/Vistas/info_eje2.html
@@ -102,35 +102,38 @@
     <div class="container">
         <p class="pre_title">Clase</p>
 
-        <h1>Capitulo 1 <span class="sub_title"> 1.1 Hardware</span></h1>
+        <h1>Capitulo 1 <span class="sub_title"> 1.2 Sumar usando circulos</span></h1>
         <div class="divider"></div>
         <div class="text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Cupiditate consectetur quibusdam unde ea porro quos sint voluptate quisquam dolores
-                veritatis assumenda omnis libero, blanditiis ullam cum consequuntur placeat voluptates
-                dolore? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos doloremque
-                sunt ipsum quae repudiandae minus eos temporibus, nemo odit! Asperiores pariatur
-                suscipit cupiditate? Totam iusto labore minus animi quisquam excepturi.</p>
+            <p>El ejercicio consiste en una pantalla llena de círculos numerados. Tu objetivo 
+                será sumar incrementos a un número inicial haciendo clic en los círculos correspondientes. 
+                Cada vez que hagas clic en un círculo, se sumará el número que representa a tu contador. 
+                Tu misión es alcanzar un marcador específico, que se te indicará al comenzar el ejercicio.<br><br>
+                A medida que vayas realizando las sumas y te acerques al marcador objetivo, encontrarás círculos 
+                con números dispuestos en diferentes patrones y secuencias. Algunos círculos pueden tener valores
+                 más altos, mientras que otros tendrán valores más bajos. Tu tarea será seleccionar los círculos 
+                 adecuados y hacer clic en ellos en el orden correcto para llegar al marcador objetivo.
+            </p>
         </div>
 
         <h1><i class="material-icons">psychology</i> Habilidades Desarrolladas</h1>
         <div class="divider"></div>
         <div class="image-row">
             <div class="image">
-                <img src="../Assets/media/skills/skill.png" alt="Imagen 1">
-                <div class="image-caption">Habilidad</div>
+                <img src="../Assets/media/skills/concentracion.png" alt="Imagen 1">
+                <div class="image-caption">Observacion</div>
             </div>
             <div class="image">
-                <img src="../Assets/media/skills/skill.png" alt="Imagen 2">
-                <div class="image-caption">Habilidad</div>
+                <img src="../Assets/media/skills/destreza.png" alt="Imagen 2">
+                <div class="image-caption">Asociacion y Razonamiento</div>
             </div>
             <div class="image">
-                <img src="../Assets/media/skills/skill.png" alt="Imagen 3">
-                <div class="image-caption">Habilidad</div>
+                <img src="../Assets/media/skills/velocidad.png" alt="Imagen 3">
+                <div class="image-caption">Vocabulario y Comprension</div>
             </div>
             <div class="image">
-                <img src="../Assets/media/skills/skill.png" alt="Imagen 4">
-                <div class="image-caption">Habilidad</div>
+                <img src="../Assets/media/skills/motricidad.png" alt="Imagen 4">
+                <div class="image-caption">Motricidad Fina</div>
             </div>
         </div>
 
