--- a/Vistas/clase.html
+++ b/Vistas/clase.html
@@ -95,39 +95,39 @@
                 </div>
                 <!--Seccion de explicacion del capitulo-->
                 <div class="col-2">
-                    <h2 class="title_explain"><i class="material-icons">history_edu</i> Explicación del capitulo</h2>
+                    <h2 class="title_explain"><i class="material-icons">history_edu</i> Capitulo: Aprendiendo y Jugando con los Fundamentos</h2>
                     <hr class="division_explain">
-                    <p class="lesson_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Cupiditate consectetur quibusdam unde ea porro quos sint voluptate quisquam dolores
-                        veritatis assumenda omnis libero, blanditiis ullam cum consequuntur placeat voluptates
-                        dolore? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos doloremque
-                        sunt ipsum quae repudiandae minus eos temporibus, nemo odit! Asperiores pariatur
-                        suscipit cupiditate? Totam iusto labore minus animi quisquam excepturi.</p>
+                    <p class="lesson_description">
+                        En este emocionante capítulo, nuestros personajes se sumergen en una variedad de actividades 
+                        educativas y divertidas. Comienzan resolviendo ejercicios de suma para mejorar sus habilidades
+                        matemáticas. Luego, se desafían a unir palabras, fortaleciendo su vocabulario y expresión oral. 
+                        Después, exploran la pronunciación y la articulación al decir en voz alta frases y nombres de objetos. 
+                    </p>
                     <h3 class="subTitle_explain"><i class="material-icons">psychology</i>Habilidades Desarrolladas</h3>
                     <hr class="division_explain">
                     <ul class="image-list">
                         <li>
-                            <img src="../Assets/media/skills/skill.png" alt="Imagen 1">
+                            <img src="../Assets/media/Services/creatividad.png" alt="Imagen 1">
                             <div class="image-text">
-                                <p>Habilidad</p>
+                                <p>Observacion</p>
                             </div>
                         </li>
                         <li>
-                            <img src="../Assets/media/skills/skill.png" alt="Imagen 2">
+                            <img src="../Assets/media/Services/resolucion.png" alt="Imagen 2">
                             <div class="image-text">
-                                <p>Habilidad</p>
+                                <p>Asociacion y Razonamiento</p>
                             </div>
                         </li>
                         <li>
-                            <img src="../Assets/media/skills/skill.png" alt="Imagen 3">
+                            <img src="../Assets/media/Services/competencia.png" alt="Imagen 3">
                             <div class="image-text">
-                                <p>Habilidad</p>
+                                <p>Vocabulario y Comprension</p>
                             </div>
                         </li>
                         <li>
-                            <img src="../Assets/media/skills/skill.png" alt="Imagen 4">
+                            <img src="../Assets/media/Services/aprendizaje.png" alt="Imagen 4">
                             <div class="image-text">
-                                <p>Habilidad</p>
+                                <p>Motricidad Fina</p>
                             </div>
                         </li>
                     </ul>
@@ -159,7 +159,7 @@
                 var elementoExterno2 = document.getElementById('descripcion');
                 var elementoExterno3 = document.getElementById('nivel');
                 elementoExterno1.innerHTML = '1.1 Unir Palabras';
-                elementoExterno2.innerHTML = 'hola';
+                elementoExterno2.innerHTML = 'En este ejercicio, el niño deberá unir las palabras con su respectiva imagen. Para ello, deberá arrastrar la palabra y soltarla en la imagen correspondiente. Al finalizar, el niño podrá escuchar la palabra y ver la imagen que seleccionó.';
                 elementoExterno3.innerHTML = 'Nivel 1';
             }
             else if (iframeUrl.endsWith('clase_UnirPalabras2.html')) {
@@ -167,21 +167,21 @@
                 var elementoExterno2 = document.getElementById('descripcion');
                 var elementoExterno3 = document.getElementById('nivel');
                 elementoExterno1.innerHTML = '1.1 Unir Palabras';
-                elementoExterno2.innerHTML = 'hola perra';
+                elementoExterno2.innerHTML = 'En este ejercicio, el niño deberá unir las palabras con su respectiva imagen. Para ello, deberá arrastrar la palabra y soltarla en la imagen correspondiente. Al finalizar, el niño podrá escuchar la palabra y ver la imagen que seleccionó.';
                 elementoExterno3.innerHTML = 'Nivel 2';
             } else if (iframeUrl.endsWith('clase_SumarCirculos.html')) {
                 var elementoExterno1 = document.getElementById('titulo');
                 var elementoExterno2 = document.getElementById('descripcion');
                 var elementoExterno3 = document.getElementById('nivel');
                 elementoExterno1.innerHTML = '1.2 Sumar Usando Circulos';
-                elementoExterno2.innerHTML = 'hola perra circular';
+                elementoExterno2.innerHTML = 'En este ejercicio, el niño deberá sumar los circulos que se le presentan. Para ello, deberá arrastrar los circulos y soltarlos en el espacio correspondiente. Al finalizar, el niño podrá escuchar la palabra y ver la imagen que seleccionó.';
                 elementoExterno3.innerHTML = 'Nivel 1';
             } else if (iframeUrl.endsWith('clase_SumarCirculos2.html')) {
                 var elementoExterno1 = document.getElementById('titulo');
                 var elementoExterno2 = document.getElementById('descripcion');
                 var elementoExterno3 = document.getElementById('nivel');
                 elementoExterno1.innerHTML = '1.2 Sumar Usando Circulos';
-                elementoExterno2.innerHTML = 'hola perra realmente circular';
+                elementoExterno2.innerHTML = 'En este ejercicio, el niño deberá sumar los circulos que se le presentan. Para ello, deberá arrastrar los circulos y soltarlos en el espacio correspondiente. Al finalizar, el niño podrá escuchar la palabra y ver la imagen que seleccionó.';
                 elementoExterno3.innerHTML = 'Nivel 2';
 
             } else {
